globus-gridftp-server (1:12.23-2+gt6.@distro@) @distro@; urgency=low

  * Packaging update to ensure priority of Globus packages

 -- Globus Toolkit <support@globus.org>  Mon, 25 Nov 2019 10:41:42 -0600

globus-gridftp-server (12.23-1+gt6.@distro@) @distro@; urgency=low

  * send final performance and restart markers when finishing with error

 -- Globus Toolkit <support@globus.org>  Thu, 21 Nov 2019 14:56:47 -0600

globus-gridftp-server (12.22-1+gt6.@distro@) @distro@; urgency=low

  * win: don't fail dir listing when encountering invalid file

 -- Globus Toolkit <support@globus.org>  Tue, 17 Sep 2019 09:55:25 -0500

globus-gridftp-server (12.21-1+gt6.@distro@) @distro@; urgency=low

  * fix sharing_groups_allow

 -- Globus Toolkit <support@globus.org>  Wed, 17 Jul 2019 16:44:41 -0500

globus-gridftp-server (12.20-1+gt6.@distro@) @distro@; urgency=low

  * exit after warning about invalid config in config.d dir

 -- Globus Toolkit <support@globus.org>  Tue, 02 Jul 2019 14:21:46 -0500

globus-gridftp-server (12.19-1+gt6.@distro@) @distro@; urgency=low

  * Add support for supported checksum advertising
  * Add support for SHA1, SHA256, SHA512 to POSIX DSI

 -- Globus Toolkit <support@globus.org>  Fri, 07 Jun 2019 13:06:34 -0500

globus-gridftp-server (12.18-1+gt6.@distro@) @distro@; urgency=low

  * add simple checksum read throttling

 -- Globus Toolkit <support@globus.org>  Mon, 03 Jun 2019 08:58:23 -0500

globus-gridftp-server (12.17-1+gt6.@distro@) @distro@; urgency=low

  * send markers in stream mode when requested by 'OPTS RETR Markers=n;'

 -- Globus Toolkit <support@globus.org>  Mon, 01 Apr 2019 13:06:01 -0500

globus-gridftp-server (12.16-2+gt6.@distro@) @distro@; urgency=low

  * fake stat responses when slow listings enabled
  * win: error on un-stat()-able files in directory listing

 -- Globus Toolkit <support@globus.org>  Fri, 01 Mar 2019 12:35:42 -0600

globus-gridftp-server (12.14-1+gt6.@distro@) @distro@; urgency=low
