@@ -1,3 +1,9 @@
+globus-gridftp-server (1:12.24-1+gt6.@distro@) @distro@; urgency=low
+
+  * Added support for globus_gridftp_server_get_task_id()
+
+ -- Globus Toolkit <support@globus.org>  Thu, 19 Mar 2020 23:24:09 +0000
+
 globus-gridftp-server (1:12.23-2+gt6.@distro@) @distro@; urgency=low
 
   * Packaging update to ensure priority of Globus packages
